--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Ceppions League
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -31,7 +31,7 @@ github_username:  jekyll
 
 header_pages:
   - about.md
-  - stagione-22-23.md
+  - stagioni/2022-2023/stagione.md
 
 # Build settings
 theme: minima
