read csv to dicts and plot histogram to svg

--- a/_data/fantasquadre.yml
+++ b/_data/fantasquadre.yml
@@ -1,5 +1,5 @@
 1:
-  name: Apoel Kan
+  name: ApoelKan
 2:
   name: Godopoli Sportiva
 3:
@@ -11,10 +11,10 @@
 6:
   name: Patetico Mineiro
 7:
-  name: Pompy
+  name: Pompy FC
 8:
   name: Real Pollo
 9:
   name: Reggisenal
 10:
-  name: Team Barco
+  name: Team Barco FC
