--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,7 +1,9 @@
 cycler==0.11.0
 et-xmlfile==1.1.0
 fonttools==4.37.1
+Jinja2==3.1.2
 kiwisolver==1.4.4
+MarkupSafe==2.1.1
 matplotlib==3.5.3
 numpy==1.23.2
 packaging==21.3
