--- a/python/data/2023_2024/fantasquadre.yml
+++ b/python/data/2023_2024/fantasquadre.yml
@@ -11,7 +11,7 @@
   excel_row: 3
   excel_col: 0
 5330685:
-  name: MedusaTeam WFC - IL BLOCCO
+  name: MedusaTeam WFC IL BLOCCO
   excel_row: 4
   excel_col: 0
 4480837:
